# nemea-modules-ng

./: .clang-tidy  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  check.yml  ci.yml  copr.yml  test.yml
cmake/: dependencies.cmake  installation.cmake
cmake/modules/: FindUNIREC++.cmake  FindUNIREC.cmake
common/: CMakeLists.txt
common/include/: logger.hpp  unirec-telemetry.hpp
common/include/factory/: pluginFactory.hpp  pluginFactoryRegistrator.hpp  pluginManifest.hpp
common/include/logger/: logger.hpp
common/include/unirec/: unirec-telemetry.hpp
common/src/: logger.cpp  unirec-telemetry.cpp
common/src/logger/: logger.cpp
common/src/unirec/: unirec-telemetry.cpp
modules/: CMakeLists.txt
modules/sampler/: README.md
modules/telemetry/: README.md
modules/telemetry/src/: CMakeLists.txt  appfs-plugin.cpp  appfs-plugin.hpp  main.cpp  ncurses-stdout-plugin.cpp  ncurses-stdout-plugin.hpp  ncurses-wrapper.cpp  ncurses-wrapper.hpp  outputPlugin.cpp  outputPlugin.hpp
modules/whitelist/: CMakeLists.txt  README.md  main.cpp
modules/whitelist/src/: CMakeLists.txt  configParser.cpp  configParser.hpp  csvConfigParser.cpp  csvConfigParser.hpp  ipAddressPrefix.cpp  ipAddressPrefix.hpp  main.cpp  whitelist.cpp  whitelist.hpp  whitelistRule.cpp  whitelistRule.hpp  whitelistRuleBuilder.cpp  whitelistRuleBuilder.hpp
pkg/: CMakeLists.txt
pkg/rpm/: CMakeLists.txt  nemea-modules-ng.spec.in
pkg/tgz/: CMakeLists.txt
sampler/: README.md
sampler/src/: CMakeLists.txt
scan_detector/src/: CircBuff.cpp  main.cpp
whitelist/: README.md
(+10 files in other folders)
